Cryomodule performance report udpate (#35)
* Add linac selector for cavity and cryomodule data

* Code cleanup